--- a/TruePong.csproj
+++ b/TruePong.csproj
@@ -214,6 +214,7 @@
     <Compile Include="Assets\Scripts\GamePlay\PaddleKeyboardController.cs" />
     <Compile Include="Assets\Scripts\GamePlay\PaddleTouchController.cs" />
     <Compile Include="Assets\Scripts\GamePlay\TriggerZone.cs" />
+    <Compile Include="Assets\Scripts\UI\GameScreen.cs" />
     <Compile Include="Assets\Scripts\UI\MainScreen.cs" />
     <Compile Include="Assets\Scripts\UI\WaitWindow.cs" />
     <Compile Include="Assets\Scripts\Utils\ActionUtils.cs" />
