--- a/TruePong.csproj
+++ b/TruePong.csproj
@@ -13,8 +13,7 @@
     <TargetFrameworkIdentifier>.NETFramework</TargetFrameworkIdentifier>
     <TargetFrameworkVersion>v3.5</TargetFrameworkVersion>
     <TargetFrameworkProfile>Unity Subset v3.5</TargetFrameworkProfile>
-    <CompilerResponseFile>
-    </CompilerResponseFile>
+    <CompilerResponseFile></CompilerResponseFile>
     <UnityProjectType>Game:1</UnityProjectType>
     <UnityBuildTarget>Android:13</UnityBuildTarget>
     <UnityVersion>2017.1.4f1</UnityVersion>
@@ -186,12 +185,14 @@
     <Compile Include="Assets\Scripts\Defs\BallDef.cs" />
     <Compile Include="Assets\Scripts\Defs\GameDef.cs" />
     <Compile Include="Assets\Scripts\GamePlay\Ball.cs" />
+    <Compile Include="Assets\Scripts\GamePlay\BallRenderer.cs" />
     <Compile Include="Assets\Scripts\GamePlay\Game.cs" />
     <Compile Include="Assets\Scripts\GamePlay\GameInitializator.cs" />
     <Compile Include="Assets\Scripts\GamePlay\Gate.cs" />
     <Compile Include="Assets\Scripts\GamePlay\Paddle.cs" />
     <Compile Include="Assets\Scripts\GamePlay\PaddleKeyboardController.cs" />
     <Compile Include="Assets\Scripts\GamePlay\PaddleTouchController.cs" />
+    <Compile Include="Assets\Scripts\GamePlay\SpriteColor.cs" />
     <Compile Include="Assets\Scripts\GamePlay\TriggerZone.cs" />
     <Compile Include="Assets\Scripts\UI\GameScreen.cs" />
     <Compile Include="Assets\Scripts\UI\MainScreen.cs" />
