--- a/Environment/Client1/Client1.csproj
+++ b/Environment/Client1/Client1.csproj
@@ -194,6 +194,7 @@
     <Compile Include="Assets\Scripts\GamePlay\PaddleTouchController.cs" />
     <Compile Include="Assets\Scripts\GamePlay\SpriteColor.cs" />
     <Compile Include="Assets\Scripts\GamePlay\TriggerZone.cs" />
+    <Compile Include="Assets\Scripts\UI\CommonDialog.cs" />
     <Compile Include="Assets\Scripts\UI\GameScreen.cs" />
     <Compile Include="Assets\Scripts\UI\MainScreen.cs" />
     <Compile Include="Assets\Scripts\Utils\ActionUtils.cs" />
